@@ -19,6 +19,7 @@ void Usage(void);
 unsigned int RUN_NUMBER = 100;
 string NAMEPATH="";
 bool DISPLAY_AS_TABLE = false;
+bool LIST_NAMEPATHS = false;
 
 //-----------
 // main
@@ -36,57 +37,72 @@ int main(int narg, char *argv[])
 	// Make sure the calibration object exists
 	if(jcalib==NULL)return -1;
 	
-	// Display constants
-	cout<<endl<<"Values for \""<<NAMEPATH<<"\" for run "<<RUN_NUMBER<<endl;
-	cout<<"--------------------"<<endl;
-	map<string, string>::iterator iter;
-	
-	// Table data and key-value data are displayed a little differently
-	if(DISPLAY_AS_TABLE){
-	
-		// DISPLAY DATA A TABLE
-	
-		// Get constants
-		vector< map<string, float> > tvals;
-		jcalib->Get(NAMEPATH, tvals);
-
-		for(unsigned int i=0; i<tvals.size(); i++){
-			map<string, float> &row = tvals[i];
-			map<string, float>::iterator iter = row.begin();
-			for(;iter!=row.end(); iter++){
-				cout<<iter->first<<"="<<iter->second<<"  ";
-			}
-			cout<<endl;
-		}
-	}else{
-
-		// DISPLAY DATA A KEY-VALUE
-
-		// Get constants
-		map<string, string> vals;
-		jcalib->Get(NAMEPATH, vals);
-
-		// Make one pass to find the maximum key width
-		unsigned int max_key_width = 1;
-		for(iter=vals.begin(); iter!=vals.end(); iter++){
-			string key = iter->first;
-			if(key.length()>max_key_width) max_key_width=key.length();
-		}
-		max_key_width++;
-
-		for(iter=vals.begin(); iter!=vals.end(); iter++){
-			string key = iter->first;
-			string val = iter->second;
-			cout<<iter->first<<" ";
-			if(key.length()<max_key_width)
-				for(unsigned int j=0; j<max_key_width-key.length(); j++)cout<<" ";
-			cout<<iter->second;
-			cout<<endl;
-		}
+	// If LIST_NAMEPATHS is true then list the namepaths
+	if(LIST_NAMEPATHS){
+		vector<string> namepaths;
+		jcalib->GetListOfNamepaths(namepaths);
+		
+		cout<<endl;
+		cout<<"Available namepaths:"<<endl;
+		cout<<"--------------------"<<endl;
+		for(unsigned int i=0; i< namepaths.size(); i++)cout<<namepaths[i]<<endl;
+		cout<<endl;
 	}
 	
-	cout<<endl;
+	// Get and print constants if NAMEPATH is set
+	if(NAMEPATH.length()!=0){
+		// Display constants
+		cout<<endl<<"Values for \""<<NAMEPATH<<"\" for run "<<RUN_NUMBER<<endl;
+		cout<<"--------------------"<<endl;
+		map<string, string>::iterator iter;
+		
+		// Table data and key-value data are displayed a little differently
+		if(DISPLAY_AS_TABLE){
+		
+			// DISPLAY DATA A TABLE
+		
+			// Get constants
+			vector< map<string, float> > tvals;
+			jcalib->Get(NAMEPATH, tvals);
+
+			for(unsigned int i=0; i<tvals.size(); i++){
+				map<string, float> &row = tvals[i];
+				map<string, float>::iterator iter = row.begin();
+				for(;iter!=row.end(); iter++){
+					cout<<iter->first<<"="<<iter->second<<"  ";
+				}
+				cout<<endl;
+			}
+		}else{
+
+			// DISPLAY DATA A KEY-VALUE
+
+			// Get constants
+			map<string, string> vals;
+			jcalib->Get(NAMEPATH, vals);
+
+			// Make one pass to find the maximum key width
+			unsigned int max_key_width = 1;
+			for(iter=vals.begin(); iter!=vals.end(); iter++){
+				string key = iter->first;
+				if(key.length()>max_key_width) max_key_width=key.length();
+			}
+			max_key_width++;
+
+			for(iter=vals.begin(); iter!=vals.end(); iter++){
+				string key = iter->first;
+				string val = iter->second;
+				cout<<iter->first<<" ";
+				if(key.length()<max_key_width)
+					for(unsigned int j=0; j<max_key_width-key.length(); j++)cout<<" ";
+				cout<<iter->second;
+				cout<<endl;
+			}
+		}
 	
+		cout<<endl;
+	}
+
 	delete app;
 
 	return 0;
@@ -115,6 +131,9 @@ void ParseCommandLineArguments(int &narg, char *argv[])
 				case 'T':
 					DISPLAY_AS_TABLE = true;
 					break;
+				case 'L':
+					LIST_NAMEPATHS = true;
+					break;
 			}
 		}else{
 			NAMEPATH = argv[i];
@@ -139,6 +158,7 @@ void Usage(void)
 	cout<<"   -R run    Set run number to \"run\""<<endl;
 	cout<<"   -t type   Set data type (float, int, ...)"<<endl;
 	cout<<"   -T        Display data as table"<<endl;
+	cout<<"   -L        List available namepaths"<<endl;
 	cout<<endl;
 
 	exit(0);
